--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -430,7 +430,7 @@ a[href|="/trixnazi"] {
     }
 
 /***********MLP-XLRG*************/
-a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"] {
+a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"], a[href|="/sstrixie"], a[href|="/lunanazi"] {
      display: block;
      clear: none;
      float: left;
@@ -465,6 +465,16 @@ a[href|="/doublevision"] {
      background-position: -824px -0px;
      width: 194px;
      height: 250px;
+     }
+a[href|="/sstrixie"] {
+     background-position: -1018px -0px;
+     width: 160px;
+     height: 200px;
+     }
+a[href|="/lunanazi"] {
+     background-position: -1178px -0px;
+     width: 237px;
+     height: 200px;
      }
 
 /***********Huge Emotes***********/
