--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -417,6 +417,86 @@ a[href|="/fillybraesad"] {
     height: 150px;
     background-image: url(%%fillybraesad%%) 
     }
+a[href|="/frenchyshrug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 100px;
+    background-image: url(%%frenchyshrug%%) 
+    }
+a[href|="/octascratch"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 144px;
+    background-image: url(%%octascratch%%) 
+    }
+a[href|="/taviwut"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 68px;
+    height: 149px;
+    background-image: url(%%taviwut%%) 
+    }
+a[href|="/britavia"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 123px;
+    background-image: url(%%britavia%%) 
+    }
+a[href|="/happytavi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 117px;
+    height: 150px;
+    background-image: url(%%happytavi%%) 
+    }
+a[href|="/tavipout"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 150px;
+    background-image: url(%%tavipout%%) 
+    }
+a[href|="/cadohyou"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 113px;
+    height: 150px;
+    background-image: url(%%cadohyou%%) 
+    }
+a[href|="/madance"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 117px;
+    height: 150px;
+    background-image: url(%%madance%%) 
+    }
+a[href|="/squishypie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 194px;
+    height: 200px;
+    background-image: url(%%squishypie%%) 
+    }
+a[href|="/rinkierie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 138px;
+    height: 200px;
+    background-image: url(%%rinkierie%%) 
+    }
 
 /*Side Bar*/
 
@@ -477,15 +557,15 @@ a[href|="/fillybraesad"] {
     font-size: 0pt;
     display: block
     }
-.sidecontentbox a.author[href$="/HappyCamper101"]:before {
-    content: "HappyCamper101";
+.sidecontentbox a.author[href$="/Happycamper101"]:before {
+    content: "Confetti Commando";
     font-size: 10pt;
     color: #369;
     display: block;
     margin-right: 0.5em;
     overflow: hidden
     }
-.sidecontentbox a.author[href$="/HappyCamper101"] {
+.sidecontentbox a.author[href$="/Happycamper101"] {
     content: "";
     color: white;
     font-size: 0pt;
