--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1290,4 +1290,24 @@ height: 100px;
 background-image: url(%%whassamattayou%%)
 }
 
+a[href|="/bandaloobestpony"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 210px;
+background-image: url(%%bandaloobestpony%%)
+}
+
+a[href|="/flutterpout"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 105px;
+background-image: url(%%flutterpout%%)
+}
+
 /* ==Boxed reddit CSS Theme v1.1.3 - (http://www.reddit.com/r/boxed/)== */
