--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -124,7 +124,8 @@ body > .content:before{
     line-height: 32px;
     text-indent: 5px;
     border: none;
-    border-color: #ffffff;
+    border-color: #000000!important;
+    color: #000000;
     border: 1px solid;
     border-radius: 16px;
     padding-right: 5px;
@@ -451,6 +452,14 @@ a[href|="/hmsnipple"] {
     height: 258px;
     background-image: url(%%HMSNipple%%) !important
     }
+a[href|="/gildastare"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 337px;
+    height: 250px;
+    background-image: url(%%gildastare%%) !important
+    }
 a[href|="/twifinger"] {
     display: block;
     clear: none;
@@ -729,6 +738,16 @@ a[href|="/ajhaybale"] {
     background-image: url(%%Imgmap%%) !important;
     background-position: -175px -160px
     }
+
+a[href|="/twicutesmile"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 194px;
+    height: 250px;
+    background-image: url(%%twicutesmile%%) !important;
+    }
+
 
 /* ------MACROS------- */
 a[href="/scumbagrando"] {
