--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -117,12 +117,12 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%pinkie-hat%%);
- width:77px;
- height:65px;
+ background:url(%%Derp-Hat%%);
+ width:67px;
+ height:60px;
  margin-top:-35px;
  margin-left:4px;
- margin-bottom:-14px;
+ margin-bottom:0px;
  margin-right:-40px;
 }
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
@@ -141,6 +141,7 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 .sidecontentbox a.author.id-t2_51isb:after {content:" (oh and also Trixie is best pony.)"; font-size:8px; padding-left:10px;}
 .sidecontentbox a.author.id-t2_5eqe2:before {content:"Pathopædia-David"}
 .sidecontentbox a.author.id-t2_5fmql {display:none;}
+.sidecontentbox a.author.id-t2_6ua87 {display:none;}
 a.author.id-t2_4mwnz,a.author.id-t2_8kzeb,a.author.id-t2_52j0w,div.content a.author.id-t2_5agom,a.author.id-t2_5o2lh,a.author.id-t2_4uott{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_4mwnz:after,a.author.id-t2_8kzeb:after,a.author.id-t2_52j0w:after,div.content a.author.id-t2_5agom:after,a.author.id-t2_5o2lh:after,a.author.id-t2_4uott:after{font-size:10px!important;display:block;letter-spacing:normal}
 a.author.id-t2_4mwnz:after{content:"DerpyHiccupKittyTail"}
