Stylesheet/emote/tag updates 2013-05-06

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -293,7 +293,7 @@ a[href|="/shyhuggle"], a[href|="/flutterhuggle"] {
 
 /* FinalFlutter emotes, full of cute! */
 
-a[href|="/flutterstache"], a[href|="/shystache"], a[href|="/shysnooze"], a[href|="/bunnysnooze"], a[href|="/bookfortshy"], a[href|="/hidingshy"], a[href|="/saveme"], a[href|="/ineedanadult"], a[href|="/shyhelp"], a[href|="/cookieshy"], a[href|="/fluttercookie"] {
+a[href|="/flutterstache"], a[href|="/shystache"], a[href|="/shysnooze"], a[href|="/bunnysnooze"], a[href|="/bookfortshy"], a[href|="/hidingshy"], a[href|="/saveme"], a[href|="/ineedanadult"], a[href|="/shyhelp"], a[href|="/cookieshy"], a[href|="/fluttercookie"], a[href|="/scaredshy"], a[href|="/scarymonsters"] {
 
     display: block;
     clear: none;
@@ -326,7 +326,10 @@ a[href|="/cookieshy"], a[href|="/fluttercookie"] {
     width: 157px;
     background-position: -800px -0px 
     }
-
+a[href|="/scaredshy"], a[href|="/scarymonsters"] {
+    width: 200px;
+    background-position: -957px -0px 
+    }
 
 /* Animotes - aPNG emotes! */
 
