--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -207,3 +207,13 @@ a[href|="/himntor"] {
     background-repeat: no-repeat;
     background-image: url(%%himntor%%)
     }
+
+a[href|="/swordbee"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 77px;
+    background-repeat: no-repeat;
+    background-image: url(%%swordbee%%)
+    }
