--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,6 +1,6 @@
 /* CSS last generated on Sat, 16 Feb 2013 02:06:21 -0600 by UNKNOWN on derpy */div.titlebox span.word {display:none}
 div.titlebox .subscribers span.number:after {content:" fillies"}
-div.titlebox .users-online span.number:after {content:" not really caring"}
+div.titlebox .users-online span.number:after {content:" being adorable"}
 
 .sidecontentbox .flair {display:none}
 .titlebox strong {font-size: medium;}
