--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -7,7 +7,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 
 /* Banner image and associated height values */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%arthur%%);
+   background: url(%%fuckyoucheese2%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 237px; /* 237 for meat's nice banner and general banner size */
@@ -27,6 +27,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 #header-bottom-left>* {
     display: inline-block;
 }
+
 
 .pagename a:after {
     content: "  and Fwiends";
@@ -891,7 +892,7 @@ a.author[href$="PartOfAShoe"],
 a.author[href$="shawa666"],
 a.author[href$="Avebone"],
 a.author[href$="Qwerty439"],
-a.author[href$="HtotheGRIFF"],
+a.author[href$="NeonSequitur"],
 a.author[href$="viper9172"],
 a.author[href$="Lazeraze"],
 a.author[href$="31eipekili"],
@@ -985,7 +986,7 @@ a.author[href$="PartOfAShoe"]:before,
 a.author[href$="shawa666"]:before,
 a.author[href$="Avebone"]:before,
 a.author[href$="Qwerty439"]:before,
-a.author[href$="HtotheGRIFF"]:before,
+a.author[href$="NeonSequitur"]:before,
 a.author[href$="viper9172"]:before,
 a.author[href$="Lazeraze"]:before,
 a.author[href$="31eipekili"]:before,
@@ -1078,7 +1079,7 @@ a.author[href$="PartOfAShoe"]:before {content:"Welt"}
 a.author[href$="shawa666"]:before {content:"Slowpoke666"}
 a.author[href$="Avebone"]:before {content:"Ambassador of Foodmanes"}
 a.author[href$="Qwerty439"]:before {content:"Asdfgh439"}
-a.author[href$="HtotheGRIFF"]:before {content:"Mad Gay"}
+a.author[href$="NeonSequitur"]:before {content:"Mad Gay"}
 a.author[href$="viper9172"]:before {content:"Sidelong"}
 a.author[href$="Lazeraze"]:before {content:"Snowlily"}
 a.author[href$="31eipekili"]:before {content:"  :I The whispering Jew "}
@@ -1165,7 +1166,7 @@ a.author[href$="AttainedAndDestroyed"]:after,
 a.author[href$="Scythesickle"]:after,
 a.author[href$="SRSaboutponies"]:after,
 a.author[href$="Sponce"]:after,
-a.author[href$=HtotheGRIFF]:after,
+a.author[href$=NeonSequitur]:after,
 a.author[href$=scriptea]:after ,
 a.author[href$="ClopIsDisgusting"]:after,
 a.author[href$=Myrandall]:after,
@@ -1230,7 +1231,7 @@ a.author[href$="AttainedAndDestroyed"]:after { content:" saggy tits are swaggy t
 a.author[href$="Scythesickle"]:after { content:" (wants to be a mod)"}
 a.author[href$="SRSaboutponies"]:after {content: "(trolls trolling trolls trolling trolling trolls)"}
 a.author[href$="Sponce"]:after { content:" (liek dis if u cry evry time)"}
-a.author[href$=HtotheGRIFF]:after  { content:" (Is very mad)"}
+a.author[href$=NeonSequitur]:after  { content:" (Is very mad)"}
 a.author[href$=scriptea]:after { content:" (Too main pone for background pone status)" }
 a.author[href$="ClopIsDisgusting"]:after  { content:" (Exists solely to shit on other people's fun)" }
 a.author[href$=Myrandall]:after { content:" (Should leave them kids alone)" }
