--- a/source-css/mylittlefalloutdiary.css
+++ b/source-css/mylittlefalloutdiary.css
@@ -511,10 +511,10 @@ display: none;
 }
 
 header-bottom-right, .tabmenu li {
-background-color: #CCCCCC; 
-color: #8B8386;
+background-color: transparent; 
+color: #BFBFBF;
 }
 .tabmenu li a { 
-background-color: #CCCCCC !important; 
-color: #8B8386;
+background-color: transparent !important; 
+color: #BFBFBF;
 }
