--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -10,7 +10,7 @@ Added emotes (1/15/13)
 /* Header */
 
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%mylittlemangobanner3%%);
+   background: url(%%mylittlemangobannerthing%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 200px; 
@@ -51,7 +51,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
     background:  url(%%background1%%)  no-repeat  fixed 50% 65% !important;
 } */
 
-body{background:url(%%chrysalisbackground%%) no-repeat fixed center center!important}
+body{background:url(%%bestmlmbackground%%) no-repeat fixed center center!important}
 .res-nightmode .content{background-color:transparent!important}
 .res-nightmode{background-color:transparent !important}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
@@ -374,7 +374,7 @@ a[href|="/snowdrop"] { background-position: -0px -996px; width: 150px; height: 1
 a[href|="/primdrop"] { background-position: -0px -1111px; width: 150px; height: 114px; }
 a[href|="/snowdropfilly"] { background-position: -141px -0px; width: 95px; height: 100px; }
 
-a[href|="/chibichrysalis"], a[href|="/scrambledeggs"], a[href|="/rarinsane"], a[href|="/chrysisnuggles"], a[href|="/mangodesu"] {
+a[href|="/chibichrysalis"], a[href|="/scrambledeggs"], a[href|="/rarinsane"], a[href|="/chrysisnuggles"], a[href|="/mangodesu"], a[href|="/zrapidfire"], a[href|="/chryssyjuice2"], a[href|="/chryssyjuice1"] {
      display: block;
      clear: none;
      float: left;
@@ -386,6 +386,9 @@ a[href|="/scrambledeggs"] { background-position: -0px -232px; width: 300px; heig
 a[href|="/rarinsane"] { background-position: -0px -457px; width: 150px; height: 179px; }
 a[href|="/chrysisnuggles"] { background-position: -150px -457px; width: 150px; height: 142px; }
 a[href|="/mangodesu"] { background-position: -150px -599px; width: 150px; height: 138px; }
+a[href|="/zrapidfire"] { background-position: -0px -737px; width: 150px; height: 134px; }
+a[href|="/chryssyjuice2"] { background-position: -150px -737px; width: 125px; height: 125px; }
+a[href|="/chryssyjuice1"] { background-position: -150px -862px; width: 125px; height: 125px; }
 
 a[href|="/spamsprakle"], a[href|="/chryssixtia"], a[href|="/ohshitbby"], a[href|="/twinotamused"] {
      display: block;
