--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -382,3 +382,13 @@ a[href|='/flimandflam2']{ background-position: -0px -1382px; width: 200px; heigh
 a[href|='/moonlight']{ background-position: -0px -1492px; width: 200px; height: 82px; }
 a[href|='/flimandflam3']{ background-position: -150px -222px; width: 150px; height: 80px; }
 a[href|='/fireflies']{ background-position: -0px -1574px; width: 200px; height: 57px; }
+
+
+a[href|='/plounge']{
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%lunajuice%%)
+    }
+
+a[href|='/plounge']{ background-position: -0px -0px; width: 962px; height: 985px; }
