--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -497,6 +497,63 @@ a[href|="/rinkierie"] {
     height: 200px;
     background-image: url(%%rinkierie%%) 
     }
+a[href|="/pinkiehug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 109px;
+    background-image: url(%%pinkiehug%%) 
+    }
+a[href|="/ppbook"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 121px;
+    height: 149px;
+    background-image: url(%%ppbook%%) 
+    }
+a[href|="/ppsurprised"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 125px;
+    height: 150px;
+    background-image: url(%%ppsurprised%%) 
+    }
+a[href|="/ppwink"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 140px;
+    background-image: url(%%winkiepie%%) 
+    }
+a[href|="/ppodium"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 107px;
+    height: 150px;
+    background-image: url(%%ppodium%%) 
+    }
+a[href|="/rainbowsplat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 121px;
+    height: 149px;
+    background-image: url(%%rainbowsplat%%) 
+    }
+a[href|="/pinkbie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 113px;
+    height: 150px;
+    background-image: url(%%pinkbie%%) 
+    }
+
 
 /*Side Bar*/
 
