--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -123,13 +123,23 @@ body > .content:before{
     height: 32px;
     line-height: 32px;
     text-indent: 5px;
-    border: none;
     border-color: #000000!important;
     color: #000000;
     border: 1px solid;
     border-radius: 16px;
     padding-right: 5px;
     }
+
+.side .md h5 {
+    font-size: 12px;
+    line-height: 13px;
+    background: #CCC!important;
+    border-color: #000000!important;
+    border: 1px solid;
+    border-radius: 0px;
+    padding: 5px;
+    }
+    
 
 /*===============Arrow Votes Change===============*/
 /*DC02 This code disables the downvote button. And makes upvotes cats. */
@@ -183,6 +193,12 @@ body > .content:before{
     margin:0 !important;
     }
 
+#siteTable .entry.dislikes .buttons:before {
+    content: "Does this post really deserve a downcat?";
+    color: blue;
+    font-size: 7pt
+    }
+
 /*===========DC03 Sidebar modification===========*/
 
 .side, .sidebox .spacer, .titlebox form.toggle, .sidebox .morelink, .icon-menu a, .side .spacer, .content, .sidecontentbox .content {
@@ -194,7 +210,7 @@ body > .content:before{
     }
 
 .side .spacer {
-    margin: 0 0 0 0;
+    margin: 10px 0 0 0;
     }
 
 /*Search bar unremoved because Draze smells
@@ -325,6 +341,8 @@ body > .content:before{
     content: "God Emperor";
     }
 
+
+
 /*==================Names==================*/
 
 /*Add a name here to replace it. Ensure , ends each line except the final one. Capitalization is important*/
@@ -387,7 +405,8 @@ a.author[href$="moonomnom"]:after,
 a.author[href$="MotharChoddar"]:after,
 a.author[href$="Dwarflord"]:after,
 a.author[href$="sna_fu_bar"]:after,
-a.author[href$="starkinmn"]:after
+a.author[href$="starkinmn"]:after,
+a.author[href$="Broken_Wagonwheel"]:after
 
 {   border-radius: 4px;
     margin-left: 4px;
@@ -410,7 +429,7 @@ a.author[href$="LunarWolves"]:after { content: " Dear Leader "}
 a.author[href$="ctare"]:after {content: " Among other things "}
 a.author[href$="Dwarflord"]:after {content: " Will write that fic someday "}
 a.author[href$="moonomnom"]:after {content: " Dayum shame"}
-
+a.author[href$="Broken_Wagonwheel"]:after {content: " Sang's Slave "}
 
 /* This is to append something to everyone. Remove comments to activate*/
 /*
