--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -193,7 +193,7 @@
     box-sizing: content-box;
     -moz-box-sizing: content-box;
 
-    margin-right: 5px; !important;
+    margin-right: 5px !important;
 }
 
 /* Result count element */
