Fix emotes button because Reddit is adding stupid things to comment boxes

--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -114,7 +114,8 @@
  * Emotes button on the standard display requires some special margins.
  */
 .bpm-search-toggle {
-    margin: 0 0px 0 5px !important;
+    margin: 5px 0px 0 5px !important;
+    float: right;
 }
 
 /*
